<resources>
    <string name="app_name">Fastrise</string>
    <string name="login">Login</string>
    <string name="mobile_no">Mobile No</string>
    <string name="password">Password</string>
    <string name="doesn_t_have_an_account_sign_up">Doesn\'t have an account?Sign Up</string>
    <string name="please_enter_user_id">Please enter user id</string>
    <string name="please_enter_mobile_no">Please enter mobile No</string>
    <string name="please_wait_logging_in_to_app">Please wait logging in to app</string>
    <string name="please_enter_user_password">Please enter user password</string>

</resources>